; ModuleID = '/home/carl/AnghaBench/TDengine/src/os/windows/src/extr_twinsocket.c_taosWinSocketInit.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/os/windows/src/extr_twinsocket.c_taosWinSocketInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@taosWinSocketInit.flag = internal global i8 0, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @taosWinSocketInit() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i8, i8* @taosWinSocketInit.flag, align 1
  %4 = sext i8 %3 to i32
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %0
  %7 = call i32 @MAKEWORD(i32 1, i32 1)
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = call i64 @WSAStartup(i32 %8, i32* %2)
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %6
  store i8 1, i8* @taosWinSocketInit.flag, align 1
  br label %12

12:                                               ; preds = %11, %6
  br label %13

13:                                               ; preds = %12, %0
  ret void
}

declare dso_local i32 @MAKEWORD(i32, i32) #1

declare dso_local i64 @WSAStartup(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
